# glimbot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.HEADER  LICENSE.INFO  README.md  SECURITY.md  diesel.toml  docker-compose.yml  sqlx-data.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cargocheck.yml  shiftleft-analysis.yml
benches/: ordset.rs
examples/: example.env
migrations/: 20210301041112_init.sql  20210305021338_timed_events.down.sql  20210305021338_timed_events.sql  20210305093900_fix_roles_update.sql  20210329062452_add_unique_timed.sql
migrations/2020-03-04-164443_db_init/: down.sql  up.sql
migrations/2020-04-19-init/: down.sql  up.sql
migrations/2020-05-09-redo-config/: down.sql  up.sql
migrations/2020-05-13-roles/: down.sql  up.sql
resources/: command.pest  conn_prelude.sql  definitions.sql  dice.pest  dictionary.sql  user_pressure.sql
src/: about.rs  args.rs  data.rs  db.rs  dev.rs  error.rs  example.rs  info.rs  lib.rs  main.rs  run.rs  util.rs
src/db/: args.rs  cache.rs  guild_conn.rs  mod.rs  timed.rs
src/db/cache/: kv.rs  mod.rs
src/dispatch/: args.rs  config.rs  message_info.rs  mod.rs
src/glimbot/: config.rs  db.rs  env.rs  guilds.rs  mod.rs  models.rs
src/glimbot/modules/: bag.rs  bot_admin.rs  command.rs  help.rs  incrementer.rs  mod.rs  ping.rs
src/glimbot/modules/bot_admin/: mod.rs  stats.rs
src/glimbot/modules/command/: mod.rs  parser.rs
src/glimbot/modules/dice/: mod.rs  module.rs  parser.rs
src/glimbot/util/: mod.rs  rate_limit.rs  snowflakes.rs
src/module/: base_filter.rs  conf.rs  info.rs  mock_raid.rs  mod.rs  moderation.rs  owner.rs  privilege.rs  roles.rs  shutdown.rs  spam.rs  status.rs
src/modules/: base_hooks.rs  commands.rs  config.rs  dictionary.rs  help.rs  hook.rs  me.rs  mod.rs  no_bot.rs  owner.rs  ping.rs  roles.rs
src/modules/spam/: mod.rs
src/util/: clock.rs  constraints.rs  mod.rs  ordset.rs
