#  Glimbot - A Discord anti-spam and administration bot.
#  Copyright (C) 2020 Nick Samson

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "glimbot"
version = "0.3.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nes77/glimbot"
description = "A Discord anti-spam and admin bot."
exclude = [".env"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
regex = "1.4"
clap = "2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
shlex = "1.0"
tracing-futures = "0.2"
structopt = "0.3"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
tracing-attributes = "0.1"
better-panic = "0.2"
once_cell = "1"
linked-hash-map = "0.5"
shellexpand = "2.1"
dirs = "3.0"
byteorder = "1"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
systemstat = "0.1"
downcast-rs = "1.2"
rust-embed = "5.9.0"
itertools = "0.10"
strip-ansi-escapes = "0.1.0"
shrinkwraprs = "0.3"
smallvec = "1.6"
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "json", "offline"]}
rand = "0.8"
zerocopy = "0.4"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[target.'cfg(target_env = "gnu")'.dependencies]
jemallocator = "0.3"

[dev-dependencies]
more-asserts = "0.2"