#  Glimbot - A Discord anti-spam and administration bot.
#  Copyright (C) 2020 Nick Samson

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "glimbot"
version = "0.3.2"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
rust = "1.51"
repository = "https://github.com/glimbot/glimbot"
description = "A Discord anti-spam and admin bot."
exclude = [".env"]


[dependencies]
dotenv = "0.15"
regex = "1.4"
clap = "2"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
shlex = "1.0"
structopt = "0.3"
tracing-subscriber = "0.2"
futures = "0.3"
tracing-attributes = "0.1"
better-panic = "0.2"
once_cell = "1"
shellexpand = "2.1"
dirs = "3.0"
byteorder = "1"
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
systemstat = "0.1"
downcast-rs = "1.2"
rust-embed = "5.9.0"
itertools = "0.10"
strip-ansi-escapes = "0.1.0"
shrinkwraprs = "0.3"
smallvec = "1.6"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "json", "offline"] }
rand = "0.8"
noisy_float = { version = "0.2", features = ["serde"] }
humantime-serde = "1.0"
arc-swap = { version = "1.2", features = ["weak"] }
im = "15.1"
num = "0.4"
parking_lot = "0.11"
thread_local = "1.1"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]

[target.'cfg(target_env = "gnu")'.dependencies]
jemallocator = "0.3"

[[bench]]
name = "ordset"
harness = false

[dev-dependencies]
more-asserts = "0.2"
criterion = "0.3"
rayon = "1.5"